# pytest-mark-filter

./: LICENSE  README.md  pyproject.toml
.github/workflows/: project.yaml  project.yml
src/mark_filter/: plugin.py
testing/: test_filter.py
