[project]
name = "pytest-mark-filter"
version = "0.1.2"
description = "Filter pytest marks by name using match kw"
readme = "README.md"
authors = [ {name = "Ygor Pontelo", "email" = "ygorpontelo@gmail.com"} ]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.3.0",
]
classifiers = [
    "Framework :: Pytest",
]
keywords = ["mark", "filter", "plugin", "match"]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[project.urls]
Homepage = "https://github.com/ygorpontelo/pytest-mark-filter"

[project.entry-points.pytest11]
mark_filter = "mark_filter.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mark_filter"]
